	given unconstrained optimizer actually works.
	* misc/optim/stk_optim_hasfmincon.m: Deprecated function..
	* misc/optim/stk_select_optimizer.m: Deprecated function.
	* misc/options/stk_options_set.m: Rewrite optimizer selection
	logic. Shorten some option names.
	* paramestim/stk_param_estim.m: Use shortened option names.
        * INDEX: Add new functions and classes.

2015-09-25  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_getdefaultbounds: Documentation needed

	* paramestim/stk_param_getdefaultbounds.m: This function is not
	marked as "STK internal" any more, since this is obviously the
	right place to document how default bounds can be specified for
	user-defined functions. Documentation needed.

	stk_plot1d.m: Create a hidden legend and return a struct of handles

	* misc/plot/stk_plot1d.m: Create a hidden legend, wich can be
	displayed using lgend ('show'), and return a struct of handles to
	make it possible to modify the plot more easily.

	Don't use UTF-8 in m-files

	* misc/design/stk_phipcrit.m: Müller -> Muller
	* misc/dist/stk_filldist.m: Idem
	* misc/dist/stk_filldist_exact.m: Idem

2015-09-25  Rémi Stroh  <remi.stroh@lne.fr>

	stk_param_getdefaultbounds: new feature to define default bounds

	* paramestim/stk_param_getdefaultbounds.m: make it possible to
	define default bounds on parameters for user-defined covariance
	functions.

2015-09-21  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_plot_shadedci.m: Do not call set (h, opt{:}) when opt is empty

	* misc/plot/stk_plot_shadedci.m: Do not call set (h, opt{:}) when
	opt is empty (it makes Octave display all the settings of the
	object with handle h, which was not intended).

2015-09-20  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_plot_shadedci.m: Accept a handle as first input argument.

	* misc/plot/stk_plot_shadedci.m: Accept a handle to an axes object
	as (optional) first input argument and accepts additional
	key-value pairs as well.
